[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fctdevs"
version = "0.1.0"
description = "Shared FCT development utilities"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "CesarRodriguez", email = "cesrodflo14@hotmail.com" }
]
dependencies = []
classifiersclassifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["fctdevs"]